--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en"data-theme="light">
+<html lang="en" data-theme="light">
+
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/blood.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rokto-sheba</title>
+    <title>RoktoSheba</title>
   </head>
   <body>
     <div id="root"></div>
